--- a/project-6/package.json
+++ b/project-6/package.json
@@ -11,6 +11,9 @@
   "author": "pk <pkrasam@gmail.com> (https://ipfs.infura.io/ipfs/QmSXiR9Khm3yo1J67nUopvVBxFJ8YGN2fUGZ34Etr3m92x/)",
   "license": "MIT",
   "devDependencies": {
+    "@openzeppelin/test-helpers": "^0.5.11",
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "lite-server": "2.4.0"
   }
 }
