--- a/project-6/package.json
+++ b/project-6/package.json
@@ -4,16 +4,38 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "lite-server",
+    "build": "webpack",
+    "dev": "webpack serve --mode development --port 3000 --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "pk <pkrasam@gmail.com> (https://ipfs.infura.io/ipfs/QmSXiR9Khm3yo1J67nUopvVBxFJ8YGN2fUGZ34Etr3m92x/)",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
     "@openzeppelin/test-helpers": "^0.5.11",
+    "babel-loader": "^8.2.2",
+    "buffer": "^6.0.3",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "lite-server": "2.4.0"
+    "copy-webpack-plugin": "^9.0.0",
+    "crypto": "^1.0.1",
+    "css-loader": "^5.2.5",
+    "http": "0.0.1-security",
+    "https": "^1.0.0",
+    "lite-server": "2.4.0",
+    "mini-css-extract-plugin": "^1.6.0",
+    "node-polyfill-webpack-plugin": "^1.1.2",
+    "os": "^0.1.1",
+    "process": "^0.11.10",
+    "stream": "0.0.2",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.37.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "web3": "^1.3.6"
   }
 }
