--- a/project-6/package.json
+++ b/project-6/package.json
@@ -36,6 +36,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.4.0",
+    "dotenv": "^10.0.0",
     "web3": "^1.3.6"
   }
 }
